[package]
name = "stadium"
version = "0.1.2"
authors = ["Gymore <gymore.contact@gmail.com>"]
edition = "2018"
description = "A allocated chunk of memory populated by a fixed set of types"
categories = ["data-structures", "memory-management"]
license = "MIT"
keywords = ["arena", "vector", "dynamic", "alloc"]
repository = "https://github.com/gymore-io/stadium"
documentation = "https://docs.rs/stadium/"
readme = "readme.md"

[badges.maintenance]
status = "passively-maintained"